# ManyValuedLogicSolver

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  output.txt
src/: BinaryTruthTable.h  FormulaEvaluator.cpp  FormulaEvaluator.h  FormulaParser.l  FormulaParser.y  FormulaParserParams.h  FormulaSolver.cpp  FormulaSolver.h  LogicParser.l  LogicParser.y  LogicalOperator.h  Makefile  ParserContext.h  Scanner.h  TruthTable.h  UnaryTruthTable.h  f.cpp  main.cpp
src/flex_and_bison/: LogicParser.l  LogicParser.y  Makefile  Scanner.h
src/flex_bison/: FormulaParser.l  FormulaParser.y  Scanner.h
src/include/: FormulaEvaluator.h  FormulaSolver.h
src/lexer/: Lexer.h
src/parser/: Token.h  ValueToken.h
src/parser/lexer/: Lexer.h
src/parser/types/: Token.h  TokenType.h
src/utils/flex_and_bison/: LogicParser.l  LogicParser.y  Makefile  ParserParams.h  logic_parser.l  logic_parser.y  main.c
src/utils/flex_and_bison/tests/: test_evaluation_input.txt  test_input.txt  test_ouput.txt
